second page content and styling

--- a/order.html
+++ b/order.html
@@ -6,7 +6,68 @@
     <link rel="stylesheet" href="./stytles.css">
   </head>
 
-  <body>
+  <main>
+    <head>
+      <a href="file:///C:/Users/orlan/Desktop/CourseWork/guided-practices/second-restaurant/index.html">The Pizza Shop</a>
+    <h1>Pizza Options</h1>
+    </head>
+
+    <div>
+      <section>
+      <h2>Pepperoni Pizza</h2>
+      <img src="./images/BrickOvenPizza2.jpg" height="300px" width="300px"
+      alt="Pepperoni Pizza">
+      <label for="Pizza Size">Pizza Size</label>
+      <select name="Pizza Size" id="Pizza Size">
+        <option value="Small">Small 10"</option>
+        <option value="Medium">Medium 12"</option>
+        <option value="Large">Large 16"</option>
+        <option value="Party Size">Party Size</option>
+      </select>
+      <label for="Pizza Shape">Pizza Shape</label>
+      <select name="Pizza Shape" id="Pizza Shape">
+        <option value="Round">Round</option>
+        <option value="Rectangular">Rectangular</option>
+      </select>
+    </section>
+
+    <section>
+      <h2>Supreme Pizza</h2>
+      <img src="./images/supreme-pizza.jpg" height="300px" width="300px"
+      alt="Supreme Pizza">
+      <label for="Pizza Size">Pizza Size</label>
+      <select name="Pizza Size" id="Pizza Size">
+        <option value="Small">Small 10"</option>
+        <option value="Medium">Medium 12"</option>
+        <option value="Large">Large 16"</option>
+        <option value="Party Size">Party Size</option>
+      </select>
+      <label for="Pizza Shape">Pizza Shape</label>
+      <select name="Pizza Shape" id="Pizza Shape">
+        <option value="Round">Round</option>
+        <option value="Rectangular">Rectangular</option>
+      </select>
+    </section>
+
+    <section>
+      <h2>Meat Pizza</h2>
+      <img src="./images/meat-pizza.jpg" height="300px" width="300px"
+      alt="Meat Pizza">
+      <label for="Pizza Size">Pizza Size</label>
+      <select name="Pizza Size" id="Pizza Size">
+        <option value="Small">Small 10"</option>
+        <option value="Medium">Medium 12"</option>
+        <option value="Large">Large 16"</option>
+        <option value="Party Size">Party Size</option>
+      </select>
+      <label for="Pizza Shape">Pizza Shape</label>
+      <select name="Pizza Shape" id="Pizza Shape">
+        <option value="Round">Round</option>
+        <option value="Rectangular">Rectangular</option>
+      </select>
+    </section>
+    </div>
     
-  </body>
+
+  </main>
 </html>
